--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,19 @@
 body{
     margin:0;
     padding: 0;
-    font-family: sans-serif; 
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+    background: #FFEFBA;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #FFEFBA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+}
+html{
+    scroll-behavior: smooth;
+}
+
+#container-header{
+   
 }
 .header{
     background-color: #4D50A5;
@@ -10,6 +22,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+    
 }
 .header__correo-label{
    margin-right: 30px;
@@ -24,15 +38,18 @@ body{
     margin-left: 50px   ;
 }
 .titles{
-    background-color: #ffffff;
+    
     width: 100%;
     height: 8vh;
     display: flex;
     flex-direction: row;  
     justify-content:space-evenly;
     align-items:center;
+   
 }
-.titles > h2{
+
+.titles > h2:hover{
+   outline: underline;
  cursor: pointer;
 }
 
@@ -41,13 +58,17 @@ body{
     cursor: pointer;
 
 }
+ a:link, a:visited, a:active {
+    text-decoration:none;
+    color: rgb(0, 0, 0);
+}
 .main{
     display: flex;
     flex-direction: column;
     justify-content:flex-end;
     align-items:center;
     width: 100%;
-   min-height: calc(100vh - 198px);
+   min-height: calc(100vh - 150px);
   background-image: url(/img/colegio.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -67,7 +88,58 @@ body{
     width: 300px;
     font-size:30px;
 }
+.our{
+    display: flex;
+    width: 100%;
+    height:100vh;
+    justify-content:space-evenly;
+    background-color: #ffffff;
+}
+.our__text--content{
+    width:50%
+}
+.our__img{
+    width: 300px;
+    height:300px;
+    display: flex;
+    align-self: center;
+    border-radius: 10px;
+}
+.our__text--content{
+    display: flex;
+    align-self: center;
+    flex-direction:column;
+}
+.our__text--content-titleMision{
+    text-align: center;
+}
+
+
+.proposal{
+    display: flex;
+    height:110vh;
+    justify-content: space-around;
+}
+.proposal__logo{
+    width: 300px;
+    height:300px;
+    display: flex;
+    
+    align-self: center;
+
+}
+.proposal__text{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.proposal__text-title{
+    text-align: center;
+}
+
+
 .social{
+    
     display: flex;
     justify-content:space-evenly;
     background-color: #1D2435;
@@ -93,7 +165,7 @@ body{
     display: flex;
     align-items: flex-start;
 }
-.social__media--networks > img{
+.social__media--networks > a > img{
     cursor: pointer;
     height: 50px;
     width: 50px;
@@ -117,3 +189,8 @@ body{
     
     color: #fff;
 }
+.ancho{
+    width :50px;
+    height :50px;
+}
+
